# python-backup-script

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  utils.py
app/: backup.py  config.py  directory_cleaner.py  generate_backup.py  main.py  ssh_client.py  utils.py
tests/: test_utils.py
